--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,20 @@
 /* Nav Bar CSS */
-
+#navbar{
+    width: 100%;
+    height: 50px;
+    background-color: grey;
+}
 
 /* Header CSS */
-
+#head{
+text-align:center;
+}
 
 
 /* Section CSS */
-
+#body{
+    margin top: 30px;
+}
 
 
 /* About Section CSS */
@@ -14,8 +22,14 @@
 
 
 /* Portfolio Item CSS */
+.me{
+    height: 500px;
+    
+}
 
-
+#imageone{
+    width: 50%;
+}
 
 /* Footer CSS */
 
