--- a/css/style.css
+++ b/css/style.css
@@ -2,31 +2,64 @@
 #navbar{
     width: 100%;
     height: 55px;
-    background-color: grey;
+    background-color: #5A81A2;
 }
 
 /* Header CSS */
 #head{
     text-align:center;
     margin: 10px;
+    
 }
 
 
 /* Section CSS */
 #body{
     margin-top: 20px;
+}
+
+#aboutme {
+    color: white;
+    text-align: center;
+    font-family: 'Fredericka the Great';
+    font-size: 40px;
+    position: relative;
     
 }
 
+#aboutmetwo {
+    color: white;
+    font-family: 'Nixie One';
+    font-size: 30px;
+    position: relative;
+    text-align: center;
+    
+}
 
+#about{
+    margin: 0px 0px 0px 300px;
+    bottom: 190px;
+    position: relative;
+}
 
+#bg {
+    position: absolute;
+    width: 100%;
+    height: auto;
+    -webkit-filter: hue-rotate(740deg);
+
+}
+
+#size{
+    width: 1000px;
+}
 /* About Section CSS */
 
 
 
 /* Portfolio Item CSS */
 .me{
-    height: 500px;
+    height: 100%;
     
 }
 
@@ -34,6 +67,33 @@
     width: 50%;
 }
 
+#me-circle {
+    text-align: center;
+    text-transform: uppercase;
+    position: relative;
+    margin-top: 75px;
+    margin-left: 50px;
+    padding: 25px 80px 25px 80px;
+    border-radius: 50%;
+    
+}
+
+#thumbnails{
+    margin-top: 350px;
+    
+}
+
+#over{
+    z-index: 1;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    overflow: auto;
+    top: 0px;
+    left: 0px;
+
+    
+}
 
 
 /* Footer CSS */
