--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@
 
 #about{
     margin: 0px 0px 0px 300px;
-    bottom: 190px;
+    bottom: 120px;
     position: relative;
 }
 
@@ -76,7 +76,7 @@
     width: 50%;
 }
 
-#me-circle {
+#me-circle{
     text-align: center;
     text-transform: uppercase;
     position: relative;
@@ -84,12 +84,14 @@
     margin-left: 50px;
     padding: 25px 80px 25px 80px;
     border-radius: 50%;
+    top: 100px;
     
 }
 
 #thumbnails{
-    margin-top: 350px;
-    
+    margin-top: 75px;
+    font-family: 'Poiret One';
+
 }
 
 #over{
@@ -108,7 +110,7 @@
     background-color: white;
     border-color: white;
     color: teal;
-    margin-left: 320px;
+    margin-left: 360px;
     margin-top: 10px;
     font-family: 'Poiret One';
     font-size: 20px;
@@ -118,12 +120,104 @@
     color: #5A81A2;
     text-align: center;
     font-family: 'Pacifico';
-    margin-top: 200px;
+    margin-top: 100px;
     font-size: 80px;
 }
 
-/* Footer CSS */
+#media{
+    top: 170px;
+}
 
+#colone{
+    display:inline-block;
+    border:0;
+    width:196px;
+    height:210px;
+    position: relative;
+    -webkit-transition: all 200ms ease-in;
+    -webkit-transform: scale(1); 
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1); 
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1);
+    transition: all 200ms ease-in;
+    transform: scale(1);   
+
+}
+
+#colone:hover{
+    z-index: 2;
+    -webkit-transition: all 200ms ease-in;
+    -webkit-transform: scale(1.2);
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1.2);   
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1.2);
+    transition: all 200ms ease-in;
+    transform: scale(1.2);
+}
+
+#coltwo{
+    display:inline-block;
+    border:0;
+    width:196px;
+    height:210px;
+    position: relative;
+    -webkit-transition: all 200ms ease-in;
+    -webkit-transform: scale(1); 
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1); 
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1);
+    transition: all 200ms ease-in;
+    transform: scale(1);   
+
+}
+
+#coltwo:hover{
+    z-index: 2;
+    -webkit-transition: all 200ms ease-in;
+    -webkit-transform: scale(1.2);
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1.2);   
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1.2);
+    transition: all 200ms ease-in;
+    transform: scale(1.2);
+}
+
+#colthree{
+    display:inline-block;
+    border:0;
+    width:196px;
+    height:210px;
+    position: relative;
+    -webkit-transition: all 200ms ease-in;
+    -webkit-transform: scale(1); 
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1); 
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1);
+    transition: all 200ms ease-in;
+    transform: scale(1);   
+
+}
+
+#colthree:hover
+{
+
+    z-index: 2;
+    -webkit-transition: all 200ms ease-in;
+    -webkit-transform: scale(1.2);
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1.2);   
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1.2);
+    transition: all 200ms ease-in;
+    transform: scale(1.2);
+}
+
+/* Footer CSS */
 
 
 /* Button CSS */
