--- a/css/style.css
+++ b/css/style.css
@@ -91,8 +91,7 @@
 #thumbnails{
     margin-top: 75px;
     font-family: 'Poiret One';
-    margin-left: 3%;
-    margin-right: 3%;
+
 }
 
 #over{
@@ -111,8 +110,8 @@
     background-color: white;
     border-color: white;
     color: teal;
-    margin-left: 45%;
-    margin-top: 1%;
+    margin-left: 360px;
+    margin-top: 10px;
     font-family: 'Poiret One';
     font-size: 20px;
 }
@@ -121,13 +120,12 @@
     color: #5A81A2;
     text-align: center;
     font-family: 'Pacifico';
-    margin-top: 85%;
+    margin-top: 100px;
     font-size: 80px;
 }
 
 #media{
-    margin-top: 30%;
-    width: 90%;
+    top: 170px;
 }
 
 #colone{
